[package]
name = "rust-acaia"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.9.0-alpha.2"
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "macros"] }
uuid = { version = "1.10.0", features = ["v4"] }
time = "0.3.36"
btleplug = "0.11.5"
futures = "0.3.30"